tests/fixtures/invalid/pow_bool_str.py
# Cannot call pow() with Bool, Str
x = pow(True, "hello")
